...
        android:src="@drawable/logo_unisannio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_unisannio" />

    <ImageView
        android:id="@+id/imageViewLogoKasteca"
        android:layout_width="350dp"
        android:layout_height="97dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/logo_kasteca"
...
